<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/list_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone" />

    <ImageView
        android:id="@+id/list_iv_order"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/iv_bg"
        android:contentDescription="@string/description"
        android:padding="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo12" />

    <TextView
        android:id="@+id/tv_myorder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/list_iv_order"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/list_iv_order"
        android:singleLine="true"
        android:text="@string/note01" />

    <TextView
        android:id="@+id/tv_myorder_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_myorder_name"
        android:layout_below="@+id/tv_myorder_name"
        android:text="@string/note02" />

    <TextView
        android:id="@+id/tv_myorder_renttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_myorder_money"
        android:layout_below="@+id/tv_myorder_money"
        android:text="@string/note03" />

    <TextView
        android:id="@+id/tv_order_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_myorder_renttime"
        android:layout_below="@+id/tv_myorder_renttime"
        android:text="@string/note04" />

</RelativeLayout>