<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <include layout="@layout/address_order" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/order_detail"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/list_iv_ordersingle"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/iv_bg"
            android:contentDescription="@string/description"
            android:padding="3dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_order_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/list_iv_ordersingle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/list_iv_ordersingle"
            android:text="@string/styles"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_order_brands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_order_styles"
            android:layout_below="@+id/tv_order_styles"
            android:layout_marginTop="10dp"
            android:text="@string/brand"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/rent_date"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:scaleY="1"
                android:scrollbarSize="13dp"
                android:text="@string/rents7" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/rents10" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#919191" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/payment_way"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_pay"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <!-- android:prompt="@string/default_pay" -->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#919191" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:text="@string/coupon"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/order_jia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:src="@drawable/icon_jia" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:text="@string/save50"
            android:textColor="#FF0000" >
        </TextView>

        <CheckBox
            android:id="@+id/cb_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/uses" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#919191" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/remarks"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/icon_xing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:src="@drawable/icon_xing" />
    </LinearLayout>

    <EditText
        android:id="@+id/order_notes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:gravity="left|top"
        android:hint="@string/please_input_message"
        android:padding="3dp"
        android:visibility="gone" >
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#919191" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/dark_btn_bg"
            android:padding="10dp"
            android:text="@string/ensure_ok"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="text" >
    </EditText>

</LinearLayout>