<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/titlebar" />

            <include layout="@layout/address_order" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/title_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/order_detail"
                android:textColor="#FFFFFF" />

            <com.zjwy.tiaobaojinew.widget.ListViewForScrollView
                android:id="@+id/lv_shopping_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#C0C0C0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/payment_way"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/sp_pays"
                    android:layout_width="130dp"
                    android:layout_height="40dp" />

                <!-- android:prompt="@string/default_pay" -->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#C0C0C0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/coupon"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/order_jia01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/description"
                    android:src="@drawable/icon_jia" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_coupon01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_coupon01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:padding="10dp"
                    android:text="@string/save50"
                    android:textColor="#FF0000" >
                </TextView>

                <CheckBox
                    android:id="@+id/cb_use01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:text="@string/uses" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#C0C0C0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/remarks"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/icon_xing01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/description"
                    android:src="@drawable/icon_xing" />
            </LinearLayout>

            <EditText
                android:id="@+id/order_notes01"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:gravity="left|top"
                android:hint="@string/please_input_message"
                android:padding="3dp"
                android:visibility="gone" >
            </EditText>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/buttom_tag_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/total"
            android:textColor="#ff0000"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doller"
            android:textColor="#ff0000"
            android:textSize="19sp" />

        <Button
            android:id="@+id/commit01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/dark_btn_bg"
            android:padding="10dp"
            android:text="@string/ok"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>